' SPDX-License-Identifier: MIT
@startuml
skinparam linetype ortho
hide empty methods
hide empty fields
package com.mercedesbenz.sechub.domain.scan.product.sereco{
'com.mercedesbenz.sechub.domain.scan.product.sereco.SerecoFalsePositiveMarker
   class SerecoFalsePositiveMarker ##[bold]black {
    ~SerecoJobDataFalsePositiveFinder : jobDatafalsePositiveCodeFinder
    ~ScanProjectConfigService : scanProjectConfigService
    ~SerecoProjectDataFalsePositiveFinder: projectDataFalsePositiveFinder
    ~SerecoProjectDataPatternMapFactory: projectDataPatternMapFactory
  }
  SerecoFalsePositiveMarker *-- SerecoJobDataFalsePositiveFinder
  SerecoFalsePositiveMarker *-- SerecoProjectDataFalsePositiveFinder
  SerecoFalsePositiveMarker *-- SerecoProjectDataPatternMapFactory
  SerecoFalsePositiveMarker -[#blue]- com.mercedesbenz.sechub.domain.scan.project.FalsePositiveEntry
  SerecoFalsePositiveMarker *-- com.mercedesbenz.sechub.domain.scan.project.ScanProjectConfigService
  SerecoFalsePositiveMarker -[#blue]- com.mercedesbenz.sechub.sereco.metadata.SerecoVulnerability
'com.mercedesbenz.sechub.domain.scan.product.sereco.SerecoJobDataFalsePositiveFinder
   class SerecoJobDataFalsePositiveFinder{
    ~CodeScanJobDataFalsePositiveStrategy : jobDataCodeScanStrategy
    ~SecretScanJobDataFalsePositiveStrategy: jobDataSecretScanStrategy
    ~WebScanJobDataFalsePositiveStrategy: jobDataSebScanStrategy
  }
  SerecoJobDataFalsePositiveFinder *-- CodeScanJobDataFalsePositiveStrategy
  SerecoJobDataFalsePositiveFinder *-- WebScanJobDataFalsePositiveStrategy
  SerecoJobDataFalsePositiveFinder *-- SecretScanJobDataFalsePositiveStrategy
  SerecoJobDataFalsePositiveFinder -[#blue]- com.mercedesbenz.sechub.domain.scan.project.FalsePositiveMetaData
  SerecoJobDataFalsePositiveFinder -[#blue]- com.mercedesbenz.sechub.sereco.metadata.SerecoVulnerability
'com.mercedesbenz.sechub.domain.scan.product.sereco.CodeScanJobDataFalsePositiveStrategy
   class CodeScanJobDataFalsePositiveStrategy{
    ~SerecoSourceRelevantPartResolver : relevantPartResolver
  }
  CodeScanJobDataFalsePositiveStrategy *-- SerecoSourceRelevantPartResolver
  CodeScanJobDataFalsePositiveStrategy -[#blue]- com.mercedesbenz.sechub.domain.scan.project.FalsePositiveCodePartMetaData
  CodeScanJobDataFalsePositiveStrategy .[#green]. com.mercedesbenz.sechub.domain.scan.project.FalsePositiveMetaData
  CodeScanJobDataFalsePositiveStrategy -[#blue]- com.mercedesbenz.sechub.sereco.metadata.SerecoCodeCallStackElement
  CodeScanJobDataFalsePositiveStrategy .[#green]. com.mercedesbenz.sechub.sereco.metadata.SerecoVulnerability
'com.mercedesbenz.sechub.domain.scan.product.sereco.SerecoSourceRelevantPartResolver
   class SerecoSourceRelevantPartResolver{
  }
   class WebScanJobDataFalsePositiveStrategy{
    
  }
'com.mercedesbenz.sechub.domain.scan.product.sereco.SerecoProjectDataFalsePositiveFinder
   class SerecoProjectDataFalsePositiveFinder{
    ~WebScanProjectDataFalsePositiveStrategy: webScanProjectDataStrategy
  }
  SerecoProjectDataFalsePositiveFinder *-- WebScanProjectDataFalsePositiveStrategy
  
'com.mercedesbenz.sechub.domain.scan.product.sereco.WebScanProjectDataFalsePositiveStrategy
   class WebScanProjectDataFalsePositiveStrategy{
  }
  WebScanProjectDataFalsePositiveStrategy .[#green]. com.mercedesbenz.sechub.domain.scan.project.FalsePositiveProjectData
  WebScanProjectDataFalsePositiveStrategy .[#green]. com.mercedesbenz.sechub.sereco.metadata.SerecoVulnerability
}
@enduml
